<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">


    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KONTRIBUSI"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/inz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:text="Total nilai gizi yang dikonsumsi hari ini:"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/energy"
        style="@style/inz"
        android:text="@string/energy"
        app:layout_constraintTop_toBottomOf="@id/inz"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/energyValue"
        style="@style/inzValue"
        app:layout_constraintBottom_toBottomOf="@id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/energy" />


    <TextView
        android:id="@+id/fat"
        style="@style/inz"
        android:text="@string/fat"
        app:layout_constraintTop_toBottomOf="@id/energy"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fatValue"
        style="@style/inzValue"
        android:layout_marginStart="184dp"
        app:layout_constraintBottom_toBottomOf="@id/fat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fat" />

    <TextView
        android:id="@+id/saturatedFat"
        style="@style/inz"
        android:text="@string/saturated_fat"
        app:layout_constraintTop_toBottomOf="@id/fat"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/saturatedFatValue"
        style="@style/inzValue"
        app:layout_constraintTop_toTopOf="@id/saturatedFat"
        app:layout_constraintBottom_toBottomOf="@id/saturatedFat"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/carbohydrates"
        style="@style/inz"
        android:text="@string/carbohydrates"
        app:layout_constraintTop_toBottomOf="@id/saturatedFat"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/carbohydratesValue"
        style="@style/inzValue"
        app:layout_constraintTop_toTopOf="@id/carbohydrates"
        app:layout_constraintBottom_toBottomOf="@id/carbohydrates"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sugar"
        style="@style/inz"
        android:text="@string/sugar"
        app:layout_constraintTop_toBottomOf="@id/carbohydrates"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sugarValue"
        style="@style/inzValue"
        app:layout_constraintTop_toTopOf="@id/sugar"
        app:layout_constraintBottom_toBottomOf="@id/sugar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/salt"
        style="@style/inz"
        android:text="@string/salt"
        app:layout_constraintTop_toBottomOf="@id/sugar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/saltValue"
        style="@style/inzValue"
        app:layout_constraintTop_toTopOf="@id/salt"
        app:layout_constraintBottom_toBottomOf="@id/salt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/protein"
        style="@style/inz"
        android:text="@string/protein"
        app:layout_constraintTop_toBottomOf="@id/salt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/proteinValue"
        style="@style/inzValue"
        app:layout_constraintTop_toTopOf="@id/protein"
        app:layout_constraintBottom_toBottomOf="@id/protein"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/consumtionLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:text="@string/consumtion_limit"
        app:layout_constraintTop_toBottomOf="@id/protein"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/limitConsumtionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/limit_consumtion_value"
        app:layout_constraintTop_toBottomOf="@id/consumtionLimit"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>